Bug Fix: Dynamic Chart datepicker cards no longer cut off minute value when using screen sizes slightly larger than Handset

--- a/UI/src/app/charts/dynamic-chart-view/dynamic-chart-view.component.css
+++ b/UI/src/app/charts/dynamic-chart-view/dynamic-chart-view.component.css
@@ -17,6 +17,7 @@
     bottom: 40px; 
     left: 15px; 
     right: 15px;
+    min-height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
